--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 homepage: https://github.com/tarkalabs/tarka-ui-kit-flutter.git
 
 environment:
-  sdk: '>=3.0.0'
+  sdk: '^3.0.0'
   flutter: ">=3.10.0"
 
 dependencies:
