--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: tarka_ui
-description: Tarka UI Kit is a reusable component library for building Flutter apps, based on a design system using Atomic Design principles
-version: 1.1.1+1
+description: Tarka UI Kit is a pre-built component library for building Flutter apps. It is based on our design system, utilizing Atomic Design principles.
+version: 1.1.2
 issue_tracker: https://github.com/tarkalabs/tarka-ui-kit-flutter/issues
 homepage: https://github.com/tarkalabs/tarka-ui-kit-flutter.git
+topics: [design-system,ui-kit]
 
 environment:
   sdk: '^3.0.0'
@@ -20,10 +21,6 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.1
   golden_toolkit: ^0.15.0
-
-topics:
-  - design system
-  - ui kit
 
 # This package supports all platforms listed below.
 platforms:
