--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   fluentui_system_icons: ^1.1.226
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
