--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   fluentui_system_icons: ^1.1.226
   intl: ^0.18.1
+  file_picker: ^8.0.2
 
 dev_dependencies:
   flutter_test:
